# GameBoy

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  main.cpp
cmake/: logging.cmake
src/: CMakeLists.txt  bitutils.hpp  bootrom.cpp  bootrom.hpp  color.hpp  common.hpp  concretememoryrange.cpp  concretememoryrange.hpp  cpu.cpp  cpu.hpp  display.hpp  fetcher.hpp  filememoryrange.cpp  filememoryrange.hpp  interrupt.cpp  interrupt.hpp  logmanager.cpp  logmanager.hpp  main.cpp  memoryrange.hpp  mmu.cpp  mmu.hpp  pixel.hpp  ppu.cpp  ppu.hpp  register.hpp  sdldisplay.cpp  sdldisplay.hpp  timer.cpp  timer.hpp
src/phases/: hblank.hpp  oamsearch.hpp  pixelrendering.hpp  ppuphase.hpp  vblank.hpp
tests/: CMakeLists.txt  blarggstestmemoryrange.cpp  blarggstestmemoryrange.hpp  cpu_test_blargg.cpp  cpu_test_single_step_test.cpp  test_main.cpp
tests/common/: common.cpp  common.hpp
tests/single_step_tests/: CMakeLists.txt  cpu_test.cpp
